Add i18n support for header + footer links

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,7 +7,7 @@
           <ul class="list-inline footer-menu">
             {{ range site.Menus.footer }}
             <li class="list-inline-item">
-              <a href="{{ .URL | absLangURL }}">{{ .Name }}</a>
+              <a href="{{ .URL | absLangURL }}">{{i18n .Name }}</a>
             </li>
             {{ end }}
           </ul>
